add public javascript file

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h1>Hello World</h1>
+    <div id="hello">
+      Hello World
+    </div>
+    <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
